--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "shortid": "^2.2.16",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
