--- a/src/config.json
+++ b/src/config.json
@@ -6,3 +6,7 @@
   "messagingSenderId": "778796200476",
   "appId": "1:778796200476:web:99633aa51ef77397a725d9"
 }
+
+// credentials:
+// email: cmittal305@gmail.com
+// password: Abc@12345
